End of Section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
-  "TokenKey": "Super secret unguessable key"
+  "TokenKey": "This is super secret validation token key to prevent whatever haking incitent happening"
 }
